# sea-orm-macro

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: it_works.rs
